fix overlapping scss properties

--- a/client/src/components/TrendingProducts/trendingProducts.scss
+++ b/client/src/components/TrendingProducts/trendingProducts.scss
@@ -43,7 +43,7 @@
 }
 
 .featuredProducts {
-  height: 100vh;
+  height: 100%;
   margin: 100px 200px;
 
   .top {
